--- a/SpringBoot-Rest-CRUD/src/main/resources/application.properties
+++ b/SpringBoot-Rest-CRUD/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jdbcdemo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+createiq.appname=Rest App Using Spring Boot
