--- a/SpringBoot-Rest-CRUD-Data-JPA/src/main/resources/application.properties
+++ b/SpringBoot-Rest-CRUD-Data-JPA/src/main/resources/application.properties
@@ -9,5 +9,17 @@ spring.jpa.show-sql= true
 # Enabling H2 Console
 spring.h2.console.enabled=true
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
+management.endpoints.web.exposure.include=*
+
+spring.boot.admin.client.url = http://localhost:9999/
+
 # Custom H2 Console URL
 spring.h2.console.path=/h2
+
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.com.createiq=DEBUG
+logging.file.path=C:/Users/lenovo/OneDrive/Desktop/Test/logs/app.log
